// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CloseButton styles should render and match snapshot when not visible 1`] = `
.circuit-0 {
  outline: none;
  height: 40px;
  width: 40px;
  border-radius: 50%;
  background-color: #FAFBFC;
  position: absolute;
  bottom: 16px;
  right: 16px;
  -webkit-transition: opacity 150ms ease-in-out,visibility 150ms ease-in-out;
  transition: opacity 150ms ease-in-out,visibility 150ms ease-in-out;
  visibility: hidden;
  opacity: 0;
  z-index: 1;
}

@media (min-width:768px) {
  .circuit-0 {
    visibility: hidden;
  }
}

<button
  className="circuit-0 circuit-1"
/>
`;

exports[`CloseButton styles should render and match snapshot when visible 1`] = `
.circuit-0 {
  outline: none;
  height: 40px;
  width: 40px;
  border-radius: 50%;
  background-color: #FAFBFC;
  position: absolute;
  bottom: 16px;
  right: 16px;
  -webkit-transition: opacity 150ms ease-in-out,visibility 150ms ease-in-out;
  transition: opacity 150ms ease-in-out,visibility 150ms ease-in-out;
  visibility: visible;
  opacity: 1;
  z-index: 1;
}

@media (min-width:768px) {
  .circuit-0 {
    visibility: hidden;
  }
}

<button
  className="circuit-0 circuit-1"
/>
`;
